--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- JS -->
   <script type="text/javascript" src="./demo.js"></script>
   <!-- fontawesome -->
-  <link href="/./fontawesome/css/all.css" rel="stylesheet">
+  <link href="./fontawesome/css/all.css" rel="stylesheet">
   <title>個人資料表</title>
 </head>
 
