--- a/index.html
+++ b/index.html
@@ -223,15 +223,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   <script>
-    $(document).ready(function(){
-      $("td").hover(function(){
-        var thisIndex = $(this).parents('tr').find('td').index( $(this) );
-        $('table tr td:nth-child(' + (thisIndex+1) + ')').addClass('active');
+    // $(document).ready(function(){
+    //   $("td").hover(function(){
+    //     var thisIndex = $(this).parents('tr').find('td').index( $(this) );
+    //     $('table tr td:nth-child(' + (thisIndex+1) + ')').addClass('active');
 
-      },function(){
-        $("td").removeClass('active');
-      });
-    });
+    //   },function(){
+    //     $("td").removeClass('active');
+    //   });
+    // });
   </script>
 </body>
 
