add tooltip popover

--- a/index.html
+++ b/index.html
@@ -273,6 +273,9 @@
         $("td").removeClass('active');
       });
 
+      $('[data-toggle="tooltip"]').tooltip();
+      $('[data-toggle="popover"]').popover();
+
     });
   </script>
 </body>
