--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
                   <label class="w-25" for="addcnname">中文姓名</label>
                   <input name="cnname" type="text" id="addcnname" class="form-control" />
                 </div>
-                <!-- <span class="text-danger" id="error-cnname">&nbsp;</span> -->
               </div>
               <!-- 英文姓名 -->
               <div class="formenname mb-4 mx-1">
@@ -96,7 +95,6 @@
                   <label class="w-25">英文姓名</label>
                   <input name="enname" type="text" id="addenname" class="form-control" />
                 </div>
-                <!-- <span class="text-danger" id="error-cnname">&nbsp;</span> -->
               </div>
               <!-- 手機 -->
               <div class="formephone mb-4 mx-1">
@@ -104,7 +102,6 @@
                   <label class="w-25">手機</label>
                   <input name="phone" type="text" id="addphone" minlength="10" class="form-control" />
                 </div>
-                <!-- <span class="text-danger" id="error-cnname">&nbsp;</span> -->
               </div>
               <!-- email -->
               <div class="formemail mb-4 mx-1">
@@ -112,7 +109,6 @@
                   <label class="w-25">信箱</label>
                   <input name="email" type="email" id="addemail" class="form-control" />
                 </div>
-                <!-- <span class="text-danger" id="error-cnname">&nbsp;</span> -->
               </div>
               <!-- 性別 -->
               <div class="formsex mb-4 mx-1 d-flex position-relative">
@@ -124,10 +120,10 @@
                     <input type="radio" name="addsex" value="woman" class="radio" />女</label>
                 </div>
               </div>
-
           </div>
           <div class="modal-footer">
-            <!-- 拿掉 data-dismiss="modal"  -->
+            <!-- 看不到的 btn 來關閉 modal -->
+            <button type="button" id="closeAddFormModal" data-dismiss="modal" hidden>close</button>
             <button type="submit" class="btn btnForm" id="addBtn">
               新增
             </button>
@@ -138,7 +134,6 @@
               取消
             </button>
           </div>
-          <!-- from 表單結尾需要包住你的 button 啊啊啊 -->
           </form>
         </div>
       </div>
@@ -193,19 +188,20 @@
                   <label><input type="radio" name="sesex" value="woman" class="seradio" />女</label>
                 </div>
               </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btnForm" id="searchBtn">
-              搜尋
-            </button>
-            <button type="button" class="btn btnForm" id="resetBtnSe">
-              重新填寫
-            </button>
-            <button type="button" class="btn btnForm btnMute" data-dismiss="modal">
-              取消
-            </button>
-          </div>
+            </div>
+            <div class="modal-footer">
+              
+              <button type="button" class="btn btnForm" id="searchBtn">
+                搜尋
+              </button>
+              <button type="button" class="btn btnForm" id="resetBtnSe">
+                重新填寫
+              </button>
+              <button type="button" class="btn btnForm btnMute" data-dismiss="modal">
+                取消
+              </button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
@@ -224,35 +220,35 @@
           <div class="modal-body">
             <form method="post" id="modifyform">
               <!-- 中文姓名 -->
-              <div class="formcnname my-3 mx-1">
-                <div class="d-flex">
+              <div class="formcnname mt-3 mb-4 mx-1">
+                <div class="d-flex position-relative">
                   <label class="w-25">中文姓名</label>
                   <input name="cnname" type="text" id="mocnname" class="form-control" />
                 </div>
               </div>
               <!-- 英文姓名 -->
-              <div class="formenname my-3 mx-1">
-                <div class="d-flex">
+              <div class="formenname mb-4 mx-1">
+                <div class="d-flex position-relative">
                   <label class="w-25">英文姓名</label>
                   <input name="enname" type="text" id="moenname" class="form-control" />
                 </div>
               </div>
               <!-- 手機 -->
-              <div class="formephone my-3 mx-1">
-                <div class="d-flex">
+              <div class="formephone mb-4 mx-1">
+                <div class="d-flex position-relative">
                   <label class="w-25">手機</label>
                   <input name="phone" type="text" id="mophone" minlength="10" class="form-control" />
                 </div>
               </div>
               <!-- email -->
-              <div class="formemail my-3 mx-1">
-                <div class="d-flex">
+              <div class="formemail mb-4 mx-1">
+                <div class="d-flex position-relative">
                   <label class="w-25">信箱</label>
                   <input name="email" type="email" id="moemail" class="form-control" />
                 </div>
               </div>
               <!-- 性別 -->
-              <div class="formsex my-3 mx-1 d-flex">
+              <div class="formsex mb-4 mx-1 d-flex position-relative">
                 <label class="w-25">性別</label>
                 <div>
                   <label><input type="radio" name="mosex" value="man" class="radio" id="modifyman" />男</label>
@@ -264,20 +260,21 @@
                 <input name="sid" id="modifysid" />
               </div>
               <!-- 確認送出 -->
-            </form>
+            </div>
+            <div class="modal-footer">
+              <!-- <button type="button" id="closeModifyFormModal" data-dismiss="modal" hidden>close</button> -->
+              <button type="submit" class="btn btnForm" id="modifyBtn">
+                修改
+              </button>
+              <button type="button" class="btn btnForm" id="resetBtnMo">
+                重新填寫
+              </button>
+              <button type="button" class="btn btnForm btnMute" data-dismiss="modal">
+                取消
+              </button>
+            </div>
           </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btnForm" data-dismiss="modal" id="modifyBtn">
-              修改
-            </button>
-            <button type="button" class="btn btnForm" id="resetBtnMo">
-              重新填寫
-            </button>
-            <button type="button" class="btn btnForm btnMute" data-dismiss="modal">
-              取消
-            </button>
-          </div>
-        </div>
+        </form>
       </div>
     </div>
   </div>
